--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiosqlite>=0.22.1
 fastapi>=0.128.4
 jinja2>=3.1.6
 mangum>=0.18.0
+psycopg2-binary>=2.9.9
 python-multipart>=0.0.22
 sqlmodel>=0.0.32
 uvicorn[standard]>=0.40.0
